--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
-            <version>${spring.security.version}}</version>
+            <version>${spring.security.version}</version>
         </dependency>
         <!-- spring -->
         <dependency>
